@startuml KiemTraDieuKien_ClassDiagram
skinparam classAttributeIconSize 0
skinparam style strictuml
title Class Diagram - UC15: Kiểm tra điều kiện thuê

' --- BOUNDARY LAYER ---
class "ScreenPolicy" as ScreenPolicy <<boundary>> {
    + showPolicy(content)
    + confirmPolicy()
}

' --- BUSINESS LAYER ---
class "Policy" as Policy <<control>> {
    - policyId: String
    - content: String
}

class "Customer" as Customer <<control>> {
    - idCard: String
}

class "RentalCondition" as RentalCondition <<control>> {
    + <<static>> validateInfo(data)
}

' --- DATABASE LAYER ---
class "PolicyDB" as PolicyDB <<entity>> {
    + <<static>> getDetails()
}

"ScreenPolicy" ..> "RentalCondition"
"RentalCondition" ..> "Policy"
"RentalCondition" ..> "Customer"
"Policy" ..> "PolicyDB"
"Customer" ..> "CustomerDB"

@enduml